--- a/views/result/footer.html
+++ b/views/result/footer.html
@@ -1,6 +1,6 @@
 {{ define "footer"}}
 
 <footer>
-        <p>Copyright <span>&copy</span> Muhammed Çelik</p>
+        <p>Copyright <span>&copy</span> Muhammed Celik</p>
 </footer>
 {{ end}}
