--- a/views/show/footer.html
+++ b/views/show/footer.html
@@ -1,5 +1,5 @@
 {{ define "footer" }}
 <footer>
-    <p>Copyright <span>&copy</span> Muhammed Çelik</p>
+    <p>Copyright <span>&copy</span> Muhammed Celik</p>
 </footer>
 {{ end}}
