--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,6 +33,7 @@ body{
     background-color: #c4add3;
     position: absolute;
     border-radius: 7%;
+    border: 4px solid black;
 }
 .background .shape{
     height: 150px;
@@ -79,13 +80,15 @@ h3{
 }
 .form-element input{
     display: block;
-    height: 25px;
+    height: 35px;
     width: 80%;
     text-align: center;
     padding: 0 10px;
     margin: 0 20px;
     font-family: 'Poppins',sans-serif;
     background-color: #F6E4F6;
+    border-radius: 100px;
+    border: 2px solid black;
 }
 
 select{
@@ -93,10 +96,12 @@ select{
     margin: 0 20px;
     width: 85%;
     padding: 0 10px;
-    height: 25px;
+    height: 35px;
     text-align: center;
     background-color: #F6E4F6;
     font-family: 'Poppins',sans-serif;
+    border-radius: 100px;
+    border: 2px solid black;
 }
 button{
     width: 30%;
@@ -122,7 +127,10 @@ button:hover{
     text-align: center;
 }
 #check{
-    margin-left: 25px;
+    margin-left: 35px;
+    height: 20px;
+    width: 20px;
+   
 }
 footer {
     position: fixed;
